[package]
name = "rusty_lumberjack_v3"
version = "0.1.0"
authors = ["bbrener1"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.6"
time = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
num_cpus = "1"
smallvec = "0.6"

rayon = "1"

num-traits = "0.2"

ndarray = { version = "0.13", features = ['rayon'] }
